--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio|Mascotas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,24 +38,23 @@
         </nav>
 
     </div>
+
+    <h2>Mascota del mes!</h2>
+
     <main>
         <section class="parrafoprimerseccion">
 
-            <h2>Mascota del mes!</h2>
+            <section class="gallery" data-aos="fade-up">
 
-            <section class="gallery">
+                <img src="./img/portada1.jpg" alt="Recargar" class="mes1">
+                <img src="./img/portada2.jpg" alt="Recargar" class="mes2">
+                <img src="./img/portada3.jpg" alt="Recargar" class="mes3">
 
-                <img src="./img/gatito 1.jfif" alt="Recargar" class="mes1">
-                <img src="./img/gatito 2.jfif" alt="Recargar" class="mes2">
-                <img src="./img/gatito 3.jfif" alt="Recargar" class="mes3">
-                
             </section>
 
-            <p class="textoparrafo1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
+            <p class="textoparrafo1"> Él es QUIJOTE, es nuestra mascota de la semana. Súper amigable! Se lleva muy bien
+                con
+                los niños y adultos mayores. Esta semana le toca estar en la portada, se lo merece! </p>
         </section>
     </main>
 
@@ -70,6 +72,15 @@
             <img src="./img/icons8-twitter.svg" alt="" class="redesimg">
         </a>
     </footer>
+    <!-- scripts de animaciones -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!-- scripts de BTS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
 </body>
 
