--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros|Mascotas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,16 +38,13 @@
     </nav>
 
 
+    <h2>Adóptame!</h2>
+
     <main>
         <section class="parrafoprimerseccion">
 
-            <h2>Adóptame!</h2>
-
-            <p class="textoparrafo1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
+            <p class="textoparrafo1"> Somos una empresa exclusivamente dedicada a rescatar animales de situaciones
+                extremas, y cuidarlos mientras esperan ser adoptados!</p>
 
         </section>
 
@@ -52,11 +52,7 @@
 
             <h2>Impacto Responsable</h2>
 
-            <p class="textoparrafo2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
+            <p class="textoparrafo2"> Cada mascota que pasa por Mascotas es cuidada como se lo merece. </p>
 
         </section>
 
@@ -64,11 +60,9 @@
 
             <h2>Misión, Visión y Valores</h2>
 
-            <p class="textoparrafo3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
+            <p class="textoparrafo3"> Tenemos como Misión disminuir la cantidad de animales en las calles. Como Visión
+                nos proponemos ser los mejores en nuestra área, bajo el Valor de Responsabilidad.
+            </p>
 
         </section>
 
@@ -88,6 +82,14 @@
             <img src="../img/icons8-twitter.svg" alt="" class="redesimg">
         </a>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!-- scripts de BTS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
 </body>
 
