--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas Frecuentes|Mascotas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,45 +37,52 @@
         </ul>
     </nav>
 
-
-    <main>
-        <section class="parrafoprimerseccion">
-
-            <h2>Pregunta Frecuente 1 ?</h2>
-
-            <p class="textoparrafo1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
-
-        </section>
-
-        <section class="parrafosegundaseccion">
-
-            <h2>Pregunta Frecuente 2 ?</h2>
-
-            <p class="textoparrafo2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
-
-        </section>
-
-        <section class="parrafoterceraseccion">
-
-            <h2>Pregunta Frecuente 3 ?</h2>
-
-            <p class="textoparrafo3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptas,
-                placeat
-                quaerat nobis
-                distinctio in dignissimos ipsam dolore nemo illum! Reiciendis a aliquid labore velit officia impedit
-                earum debitis. </p>
-
-        </section>
-
-    </main>
+    <div class="accordion " id="accordionExample">
+        <div class="accordion-item ">
+            <h2 class="accordion-header " id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    <strong>¿Cómo adoptar?</strong>
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Es fácil, clickea en la imagen del amigo que quieras tener
+                    y serás redirigido a un formulario que te permitirá comenzar el proceso de adopción.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong> ¿De dónde obtienen a los animales? </strong>
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Todos son animales rescatados por Mascotas o por terceros.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <strong> ¿Tiene Costo?</strong>
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Todo el proceso es gratuito.
+                    Lo único que se deberá abonar es una tarifa, es lo que nos permite continuar funcionando.
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p class="footer">Mascotas S.R.L</p>
@@ -88,6 +98,14 @@
             <img src="../img/icons8-twitter.svg" alt="" class="redesimg">
         </a>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!-- scripts de BTS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
 </body>
 
