--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </div>
 
-    <h2>Mascota del mes!</h2>
+    <h2>Mascota del mes!!!</h2>
 
     <main>
         <section class="parrafoprimerseccion">
